libartnet (1.2.1) bookworm; urgency=medium

  * In SRV mode, send outgoing DMX packets by looking up previously
    received ArtPollReply and finding subscribers

 -- Atle Solbakken <atle@goliathdns.no>  Wed, 11 Dec 2024 11:01:09 +0100

libartnet (1.2.0) bullseye; urgency=medium

  * Experimental support for ArtNet4

 -- Atle Solbakken <atle@goliathdns.no>  Sat, 15 Jul 2023 21:29:47 +0200

libartnet (1.1.1-1) unstable; urgency=medium

  * Change BindIndex and pages implementation in node object. Might break
    existing applications.

 -- Atle Solbakken <atle@goliathdns.no>  Thu, 13 Jul 2023 06:36:12 +0200

libartnet (1.1.0-1) unstable; urgency=low

  * Release 1.1.0

 -- Simon Newton <nomis52@gmail.com>  Sat, 15 May 2010 17:49:50 +0000

libartnet (1.0.5.200705051336-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Sat,  5 May 2007 13:36:23 +0800

libartnet (1.0.5.200705051324-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Sat,  5 May 2007 13:24:30 +0800

libartnet (1.0.5.200704020300-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Mon,  2 Apr 2007 03:00:49 +0800

libartnet (1.0.5.200612261456-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Tue, 26 Dec 2006 14:56:38 +0800

libartnet (1.0.4.200610290609-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Sun, 29 Oct 2006 06:09:27 +0800

libartnet (1.0.4.200609191108-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Tue, 19 Sep 2006 11:08:19 +0800

libartnet (1.0.4.200609191106-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Tue, 19 Sep 2006 11:06:01 +0800

libartnet (1.0.4.200609181810-1) unstable; urgency=low

  * New upstream release

 -- Simon <simon@maul.nomis52.net>  Mon, 18 Sep 2006 18:10:29 +0800
